[package]
name = "aict"
version = "0.2.0"
authors = ["Fralonra <zoronlivingston@gmail.com>"]
description = "Generates auto-incrementing unique IDs"
edition = "2021"
homepage = "https://github.com/fralonra/aict"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fralonra/aict"
keywords = ["id", "unique"]
exclude = [".gitignore", ".github/*"]

[dependencies]
