[package]
name = "aict"
version = "0.4.0"
authors = ["Fralonra <zoronlivingston@gmail.com>"]
description = "Generates auto-incrementing unique IDs"
documentation = "https://docs.rs/aict"
edition = "2021"
homepage = "https://github.com/fralonra/aict"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fralonra/aict"
keywords = ["id", "unique"]
exclude = [".gitignore", ".github/*"]

[dependencies]
